# RustUnam

tarea1_1/: Cargo.toml
tarea1_1/src/: CountMe.txt  tarea1_1.rs
tarea1_2/: Cargo.toml
tarea1_2/src/: main.rs
tarea1_3/: Cargo.toml
tarea1_3/src/: CountMe.txt  main.rs
tarea2_rustlings/exercises/01_variables/: variables1.rs
tarea2_rustlings/exercises/03_if/: if1.rs
tarea2_rustlings/exercises/04_primitive_types/: primitive_types2.rs
tarea2_rustlings/exercises/07_structs/: structs3.rs
tarea2_rustlings/exercises/09_strings/: strings1.rs  strings3.rs
tarea2_rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
tarea2_rustlings/exercises/12_options/: options1.rs  options2.rs
tarea2_rustlings/exercises/13_error_handling/: errors6.rs
tarea2_rustlings/exercises/14_generics/: generics2.rs
tarea2_rustlings/exercises/15_traits/: traits2.rs  traits4.rs
tarea2_rustlings/exercises/17_tests/: tests1.rs  tests2.rs
tarea2_rustlings/exercises/18_iterators/: iterators2.rs  iterators3.rs  iterators5.rs
tarea2_rustlings/exercises/19_smart_pointers/: arc1.rs  box1.rs  rc1.rs
tarea2_rustlings/exercises/20_threads/: threads1.rs  threads2.rs
tarea2_rustlings/exercises/21_macros/: macros4.rs
tarea2_rustlings/exercises/22_clippy/: clippy3.rs
tarea3/tarea3_1/: Cargo.toml
tarea3/tarea3_1/src/: main.rs
tarea3/tarea3_2/: Cargo.toml
tarea3/tarea3_3/: Cargo.toml
tarea4/: .gitignore  bispectra_call.py
tarea4/bispectra_rust/: Cargo.toml  brew_installed_packages.txt
tarea4/bispectra_rust/src/: lib.rs
tarea4/env/: pyvenv.cfg
(+8 files in other folders)
