[package]
name = "bispectra_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bispectra_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
# Use the ndarray version that numpy depends on
ndarray = { version = "0.15.6", features = ["blas"] }
rayon = "1.7"

[package.metadata.maturin]
universal2 = true